# gbremote-client

./: README.md  configure.ac  enigma2-plugin-extensions-gbipboxclient.bb  enigma2-plugin-systemplugins-gbipboxclient.bb
CONTROL/: control  postinst
po/: Makefile.am  de.po  it.po  plugin.pot  wizard.pot  xml2po.py
src/: GBIpboxAbout.py  GBIpboxClient.py  GBIpboxDownloader.py  GBIpboxLocale.py  GBIpboxMenu.py  GBIpboxMount.py  GBIpboxRemoteTimer.py  GBIpboxScan.py  GBIpboxTimer.py  GBIpboxWizard.py  Makefile.am  gbipboxwizard.xml  plugin.py
usr/lib/enigma2/python/Plugins/Extensions/GBIpboxClient/: GBIpboxClient.py  GBIpboxDownloader.py  GBIpboxMenu.py  GBIpboxMount.py  GBIpboxScan.py  GBIpboxWizard.py  gbipboxwizard.xml  plugin.py
usr/lib/enigma2/python/Plugins/SystemPlugins/GB_ipbox/: __init__.py  __init__.pyo  client  gbwizard.xml  plugin.pyo
usr/lib/enigma2/python/Plugins/SystemPlugins/GB_ipbox/skin/: GBImport.xml  GBWizard.xml
usr/lib/enigma2/python/Plugins/SystemPlugins/GB_ipbox/src/: exclude  key_0  sourcnum
